# cpp-design-patterns

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  configure
abstract-document/: CMakeLists.txt  README.md  main.cpp
abstract-document/etc/: abstract-document.puml
abstract-document/include/: AbstractDocument.h  App.h  Car.h  Document.h  HasModel.h  HasParts.h  HasPrice.h  HasType.h  Part.h
abstract-document/src/: AbstractDocument.cpp  App.cpp
abstract-document/tests/: CMakeLists.txt  abstract_document_test.cpp  app_test.cpp  domain_test.cpp
abstract-factory/: CMakeLists.txt  README.md  main.cpp
abstract-factory/etc/: abstract-factory.puml
abstract-factory/include/: App.h  Army.h  Castle.h  ElfArmy.h  ElfCastle.h  ElfKing.h  ElfKingdomFactory.h  King.h  Kingdom.h  KingdomFactory.h  OrcArmy.h  OrcCastle.h  OrcKing.h  OrcKingdomFactory.h
abstract-factory/src/: App.cpp  ElfArmy.cpp  ElfCastle.cpp  ElfKing.cpp  Kingdom.cpp  OrcArmy.cpp  OrcCastle.cpp  OrcKing.cpp
abstract-factory/tests/: CMakeLists.txt  abstract_factory_test.cpp  app_test.cpp
active-object/: CMakeLists.txt
active-object/include/: ActiveObject.h  App.h  Orc.h
active-object/src/: ActiveObject.cpp
active-object/tests/: CMakeLists.txt  app_test.cpp
acyclic-visitor/: CMakeLists.txt
acyclic-visitor/include/: AllModemVisitor.h  App.h  ConfigureForDosVisitor.h  ConfigureForUnixVisitor.h  Hayes.h  HayesVisitor.h  Modem.h  ModemVisitor.h  Zoom.h  ZoomVisitor.h
acyclic-visitor/src/: App.cpp  ConfigureForDosVisitor.cpp  ConfigureForUnixVisitor.cpp  Hayes.cpp  Zoom.cpp
acyclic-visitor/tests/: CMakeLists.txt  app_test.cpp  hayes_test.cpp  zoom_test.cpp
adapter/: CMakeLists.txt  README.md  main.cpp
adapter/etc/: adapter-sequence-diagram.puml  adapter.puml
adapter/include/: App.h  Capitan.h  Captain.h  FishingBoat.h  FishingBoatAdapter.h  RowingBoat.h
adapter/src/: App.cpp  Captain.cpp  FishingBoat.cpp  FishingBoatAdapter.cpp
adapter/tests/: CMakeLists.txt  adapter_pattern_test.cpp  app_test.cpp
ambassador/: CMakeLists.txt
ambassador/include/: App.h  Client.h  RemoteService.h  RemoteServiceInterface.h  RemoteServiceStatus.h  ServiceAmbassador.h
ambassador/src/: App.cpp  Client.cpp  RemoteService.cpp  RemoteServiceStatus.cpp  ServiceAmbassador.cpp
ambassador/tests/: CMakeLists.txt  app_test.cpp  client_test.cpp  remote_service_test.cpp  service_ambassador_test.cpp
arrange-act-assert/: CMakeLists.txt
arrange-act-assert/include/: Cash.h
arrange-act-assert/src/: Cash.cpp
arrange-act-assert/tests/: CMakeLists.txt  cash_aaa_test.cpp  cash_anti_aaa_test.cpp  cash_bdd_test.cpp
bridge/: CMakeLists.txt
bridge/include/: Enchantment.h  FlyingEnchantment.h  Hammer.h  SoulEatingEnchantment.h  Sword.h  Weapon.h
bridge/src/: App.cpp  FlyingEnchantment.cpp  Hammer.cpp  SoulEatingEnchantment.cpp  Sword.cpp
bridge/tests/: CMakeLists.txt  app_test.cpp  weapon_test.cpp
builder/: CMakeLists.txt
builder/include/: App.h  Armor.h  HairColor.h  HairType.h  Hero.h  Profession.h  Weapon.h
builder/src/: App.cpp  Armor.cpp  HairColor.cpp  HairType.cpp  Hero.cpp  Profession.cpp  Weapon.cpp
builder/tests/: CMakeLists.txt  app_test.cpp  hero.cpp
chain-of-responsibility/: CMakeLists.txt
chain-of-responsibility/include/: OrcCommander.h  OrcKing.h  OrcOfficer.h  OrcSoldier.h  Request.h  RequestHandler.h  RequestType.h
chain-of-responsibility/src/: App.cpp  OrcCommander.cpp  OrcKing.cpp  OrcOfficer.cpp  OrcSoldier.cpp  RequestType.cpp
chain-of-responsibility/tests/: CMakeLists.txt  app_test.cpp  orc_king_test.cpp
command/: CMakeLists.txt
command/include/: Goblin.h  Size.h  Target.h  Visibility.h  Wizzard.h
command/src/: App.cpp  Target.cpp  Wizzard.cpp
command/tests/: CMakeLists.txt  app_test.cpp  command_test.cpp
composite/: CMakeLists.txt
composite/include/: Letter.h  LetterComposite.h  Messenger.h  Sentence.h  Word.h
composite/src/: App.cpp  Letter.cpp  LetterComposite.cpp  Sentence.cpp  Word.cpp
composite/tests/: CMakeLists.txt  app_test.cpp  messenger_test.cpp
decorator/: CMakeLists.txt
decorator/include/: ClubbedTroll.h  SimpleTroll.h  Troll.h
decorator/src/: App.cpp  ClubbedTroll.cpp  SimpleTroll.cpp
decorator/tests/: CMakeLists.txt  app_test.cpp  clubbed_troll_test.cpp  simple_troll_test.cpp
facade/: CMakeLists.txt
facade/include/: DwarvenCartOperator.h  DwarvenGoldDigger.h  DwarvenGoldmineFacade.h  DwarvenMineWorker.h  DwarwenTunnelDigger.h
facade/src/: App.cpp
facade/tests/: CMakeLists.txt  app_test.cpp  dwarven_goldmine_facade.cpp
factory-method/: CMakeLists.txt
factory-method/include/: App.h  Blacksmith.h  ElfBlacksmith.h  ElfWeapon.h  OrcBlacksmith.h  OrcWeapon.h  Weapon.h  WeaponType.h
factory-method/src/: App.cpp  ElfBlacksmith.cpp  ElfWeapon.cpp  OrcBlacksmith.cpp  OrcWeapon.cpp  WeaponType.cpp
factory-method/tests/: CMakeLists.txt  app_test.cpp  factory_method.cpp
flyweight/: CMakeLists.txt
flyweight/include/: AlchemistShop.h  App.h  HealingPotion.h  HolyWaterPotion.h  InvisibilityPotion.h  PoisonPotion.h  Potion.h  PotionFactory.h  PotionType.h  StrengthPotion.h
flyweight/src/: AlchemistShop.cpp  App.cpp  HealingPotion.cpp  HolyWaterPotion.cpp  InvisibilityPotion.cpp  PoisonPotion.cpp  PotionFactory.cpp  StrengthPotion.cpp
flyweight/tests/: CMakeLists.txt  alchemist_shop_test.cpp  app_test.cpp
interpreter/: CMakeLists.txt
interpreter/include/: Expression.h  MinusExpression.h  MultiplyExpression.h  NumberExpression.h  PlusExpression.h
interpreter/src/: App.cpp  MinusExpression.cpp  MultiplyExpression.cpp  NumberExpression.cpp  PlusExpression.cpp
interpreter/tests/: CMakeLists.txt  app_test.cpp  minus_expression_test.cpp  (+3 more)
iterator/: CMakeLists.txt
mediator/: CMakeLists.txt
memento/: CMakeLists.txt
monostate/: CMakeLists.txt  main.cpp
multiton/: CMakeLists.txt  main.cpp
observer/: CMakeLists.txt
prototype/: CMakeLists.txt
proxy/: CMakeLists.txt  main.cpp
proxy/src/: App.cpp  (+2 more)
singleton/: CMakeLists.txt
state/: CMakeLists.txt
template/: CMakeLists.txt
template-method/: CMakeLists.txt
(+184 files in other folders)
